--- a/ky_tuc_xa/tao_hop_dong.html
+++ b/ky_tuc_xa/tao_hop_dong.html
@@ -2,100 +2,125 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Create Contract</title>
     <link rel="stylesheet" href="bootstrap/bootstrap-5.2.3-dist/css/bootstrap.css">
-    <script src="bootstrap/bootstrap-5.2.3-dist/js/bootstrap.js"></script>
+    <script src="bootstrap/bootstrap-5.2.3-dist/js/bootstrap.bundle.js"></script>
 </head>
 <body>
 <div class="d-flex justify-content-center align-items-center container-fluid"
-     style="height: 100vh;background:linear-gradient(120deg, #3ca7ee, #9b408f)">
+     style="height: 100vh; background: linear-gradient(120deg, #3ca7ee, #9b408f)">
     <div class="card shadow p-4" style="width: 60%">
         <h3 class="text-center">Create Contract</h3>
-        <div class="row">
-            <div class="col-sm-6">
-                <form>
+
+        <form id="contractForm" class="needs-validation" novalidate>
+            <div class="row">
+                <!--               font hợp đồng-->
+                <div class="col-sm-6">
                     <div class="row">
                         <label class="form-label col-sm-4">StudentCode</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control mb-3 col-sm-6" placeholder="StudentCode" >
+                            <input type="text" class="form-control mb-3" placeholder="StudentCode" required>
+                            <div class="invalid-feedback">Vui lòng nhập mã hợp lệ</div>
                         </div>
                     </div>
-
                     <div class="row">
                         <label class="form-label col-sm-4">RoomCode</label>
                         <div class="col-sm-8">
-                            <input type="password" class="form-control mb-3 col-sm-6" placeholder="RoomCode">
+                            <input type="text" class="form-control mb-3" placeholder="RoomCode" required>
+                            <div class="invalid-feedback">Vui lòng nhập mã phòng</div>
                         </div>
                     </div>
                     <div class="row">
                         <label class="form-label col-sm-4">StartDay</label>
                         <div class="col-sm-8">
-                            <input type="date" class="form-control mb-3 col-sm-6" placeholder="StartDay">
+                            <input type="date" class="form-control mb-3" required>
+                            <div class="invalid-feedback">Vui lòng chọn ngày bắt đầu</div>
                         </div>
                     </div>
                     <div class="row">
                         <label class="form-label col-sm-4">EndDay</label>
                         <div class="col-sm-8">
-                            <input type="date" class="form-control mb-3 col-sm-6" placeholder="EndDay">
+                            <input type="date" class="form-control mb-3" required>
+                            <div class="invalid-feedback">Vui lòng chọn ngày kết thúc</div>
                         </div>
                     </div>
                     <div class="row">
                         <label class="form-label col-sm-4">RentalCost</label>
                         <div class="col-sm-8">
-                            <input type="number" class="form-control mb-3 col-sm-6" placeholder="RentalCost">
+                            <input type="number" class="form-control mb-3" required>
+                            <div class="invalid-feedback">Vui lòng nhập giá thuê</div>
                         </div>
-                    </div>
-                </form>
-            </div>
-            <div class="col-sm-6"><form>
-                <div class="row">
-                    <label class="form-label col-sm-4">StudentName</label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control mb-3 col-sm-6" placeholder="StudentName" readonly>
                     </div>
                 </div>
 
-                <div class="row">
-                    <label class="form-label col-sm-4">Birthday</label>
-                    <div class="col-sm-8">
-                        <input type="date" class="form-control mb-3 col-sm-6" placeholder="BirthDay" readonly>
+                <!--              font thông tin sinh vien-->
+                <div class="col-sm-6">
+                    <div class="row">
+                        <label class="form-label col-sm-4">StudentName</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control mb-3" readonly>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <label class="form-label col-sm-4">Birthday</label>
+                        <div class="col-sm-8">
+                            <input type="date" class="form-control mb-3" readonly>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <label class="form-label col-sm-4">Gender</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control mb-3" readonly>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <label class="form-label col-sm-4">CMND</label>
+                        <div class="col-sm-8">
+                            <input type="number" class="form-control mb-3" readonly>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <label class="form-label col-sm-4">Address</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control mb-3" readonly>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <label class="form-label col-sm-4">NumberPhone</label>
+                        <div class="col-sm-8">
+                            <input type="number" class="form-control mb-3" readonly>
+                        </div>
                     </div>
                 </div>
-                <div class="row">
-                    <label class="form-label col-sm-4">Gender</label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control mb-3 col-sm-6" placeholder="Gender" readonly>
-                    </div>
-                </div>
-                <div class="row">
-                    <label class="form-label col-sm-4">CMND</label>
-                    <div class="col-sm-8">
-                        <input type="number" class="form-control mb-3 col-sm-6" placeholder="CMND" readonly>
-                    </div>
-                </div>
-                <div class="row">
-                    <label class="form-label col-sm-4">Address</label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control mb-3 col-sm-6" placeholder="Address" readonly>
-                    </div>
-                </div>
-                <div class="row">
-                    <label class="form-label col-sm-4">NumberPhone</label>
-                    <div class="col-sm-8">
-                        <input type="number" class="form-control mb-3 col-sm-6" placeholder="NumberPhone" readonly>
-                    </div>
-                </div>
-            </form></div>
-        </div>
-        <div class="row justify-content-center ">
-            <div class="col-sm-4">
-                <button type="submit" class="btn btn-outline-success bt w-100"> Create</button>
             </div>
-            <div class="col-sm-4">
-                <button type="submit" class="btn btn-outline-danger w-100"> Exit</button>
+
+            <div class="row justify-content-center">
+                <div class="col-sm-4">
+                    <button type="submit" class="btn btn-outline-success w-100">Create</button>
+                </div>
+                <div class="col-sm-4">
+                    <button type="button" class="btn btn-outline-danger w-100" onclick="window.location.reload()">Exit
+                    </button>
+                </div>
             </div>
-        </div>
+        </form>
     </div>
 </div>
+
+<!-- Script xử lý Bootstrap validation -->
+<script>
+    (function () {
+        'use strict'
+        const form = document.getElementById('contractForm');
+        form.addEventListener('submit', function (event) {
+            if (!form.checkValidity()) {
+                event.preventDefault();
+                event.stopPropagation();
+            }
+            form.classList.add('was-validated');
+        }, false);
+    })();
+</script>
+
 </body>
 </html>
