--- a/ky_tuc_xa/menu.html
+++ b/ky_tuc_xa/menu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Hệ thống quản lý ký túc xá</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
