--- a/ky_tuc_xa/admin.html
+++ b/ky_tuc_xa/admin.html
@@ -1,20 +1,226 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-  <script src="bootstrap/bootstrap-5.2.3-dist/js/bootstrap.js"></script>
-  <link rel="stylesheet" href="bootstrap/bootstrap-5.2.3-dist/css/bootstrap.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hệ Thống Quản Lý Ký Túc Xá</title>
+    <link rel="stylesheet" href="bootstrap/bootstrap-5.2.3-dist/css/bootstrap.css">
+    <script src="bootstrap/bootstrap-5.2.3-dist/js/bootstrap.bundle.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-<div class="container">
-  <header class="col"></header>
- <nav class="row">
-   <button class="btn btn-outline-success"> Quản Lý Sinh Viên</button>
-   <button class="btn btn-outline-success"> Quản lý hợp đồng</button>
-   <button class="btn btn-outline-success"> Quản lý vi phạm</button>
-   <button class="btn btn-outline-success"> Quản lý hợp đồng</button>
- </nav>
+<div class="container mt-5">
+    <header class="row">
+        <h1 class="text-center">Hệ Thống Quản Lý Ký Túc Xá</h1>
+    </header>
 </div>
+
+<nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <button class="btn btn-outline-success m-1" onclick="showSection('sinhvien-section')">Quản lý sinh viên</button>
+                </li>
+                <li class="nav-item">
+                    <button class="btn btn-outline-success m-1" onclick="showSection('contract-section')">Quản lý hợp đồng</button>
+                </li>
+                <li class="nav-item">
+                    <button class="btn btn-outline-success m-1" onclick="showSection('violation-section')">Quản lý vi phạm</button>
+                </li>
+                <li class="nav-item">
+                    <button class="btn btn-outline-success m-1" onclick="showSection('thongKe')">Thống kê doanh thu</button>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<!-- QUẢN LÝ SINH VIÊN -->
+<div class="container container-section" id="sinhvien-section" style="display: none">
+    <h2 class="text-center text-info mt-4">Student Management (Coming Soon)</h2>
+</div>
+
+<!-- QUẢN LÝ HỢP ĐỒNG -->
+<div class="container container-section" id="contract-section" style="display: none">
+    <h1 class="text-center mt-3 mb-4 text-primary">CONTRACT MANAGEMENT</h1>
+    <button class="btn btn-success mb-3" data-bs-toggle="modal" data-bs-target="#createContractModal">
+        <i class="fa fa-plus"></i> Create New Contract
+    </button>
+    <table class="table table-sm table-bordered text-center table-striped">
+        <thead class="table-light">
+        <tr>
+            <th>Contract ID</th>
+            <th>Student Name</th>
+            <th>Room</th>
+            <th>Start Date</th>
+            <th>End Date</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>HD001</td>
+            <td>Nguyen Van A</td>
+            <td>Phòng 101</td>
+            <td>2025-01-01</td>
+            <td>2025-06-30</td>
+            <td>
+                <button class="btn btn-sm btn-warning btn-update me-1" data-bs-toggle="modal" data-bs-target="#updateContractModal">
+                    <i class="fa fa-edit"></i>
+                </button>
+                <button class="btn btn-sm btn-danger btn-delete" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal">
+                    <i class="fa fa-trash"></i>
+                </button>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
+<!-- MODAL CHI TIẾT HỢP ĐỒNG -->
+<div class="modal fade" id="contractDetailModal" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Contract Detail</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <p>Hợp đồng thuê phòng của sinh viên Nguyen Van A tại phòng 101 từ 01/01/2025 đến 30/06/2025.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- QUẢN LÝ VI PHẠM -->
+<div class="container container-section" id="violation-section" style="display: none">
+    <h1 class="text-center mt-3 mb-4 text-danger">VIOLATION MANAGEMENT</h1>
+    <table class="table table-sm table-bordered text-center table-striped">
+        <thead class="table-light">
+        <tr>
+            <th>Student Code</th>
+            <th>Student Name</th>
+            <th>Number Of Violation</th>
+            <th>Detail</th>
+            <th>Delete</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>SV001</td>
+            <td>Le Van A</td>
+            <td>3</td>
+            <td><button class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#violationDetailModal">Detail</button></td>
+            <td><button class="btn btn-sm btn-danger btn-delete">Delete</button></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
+<!-- MODAL CHI TIẾT VI PHẠM -->
+<div class="modal fade" id="violationDetailModal" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Violation Detail</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <p>Sinh viên Le Van A đã vi phạm 3 lần quy định ký túc xá. Vui lòng liên hệ ban quản lý để biết thêm chi tiết.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- THỐNG KÊ DOANH THU -->
+<div class="container container-section" id="thongKe" style="display: none">
+    <h2 class="text-center text-danger mt-4">DORMITORY REVENUE STATISTICS</h2>
+    <canvas id="revenueChart" width="800" height="400"></canvas>
+</div>
+
+<!-- MODAL XÁC NHẬN XÓA -->
+<div class="modal fade" id="confirmDeleteModal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title text-danger">Confirm Delete</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">Are you sure you want to delete this record?</div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" id="confirmDeleteBtn" class="btn btn-danger">Yes, Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- SCRIPT -->
+<script>
+    function showSection(sectionId) {
+        document.querySelectorAll('.container-section').forEach(el => el.style.display = 'none');
+        document.getElementById(sectionId).style.display = 'block';
+    }
+
+    const result = {
+        labels: ["Quý 1", "Quý 2", "Quý 3", "Quý 4"],
+        data: [3200000, 4500000, 2100000, 3800000]
+    };
+
+    const ctx = document.getElementById("revenueChart").getContext('2d');
+    const revenueChart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+            labels: result.labels,
+            datasets: [{
+                label: 'Doanh Thu (VND)',
+                data: result.data,
+                backgroundColor: ['#4caf50', '#2196f3', '#ff9800', '#f44336']
+            }]
+        },
+        options: {
+            responsive: true,
+            scales: {
+                y: {
+                    beginAtZero: true,
+                    ticks: {
+                        callback: function (value) {
+                            return value.toLocaleString('vi-VN') + ' VNĐ';
+                        }
+                    }
+                }
+            }
+        }
+    });
+
+    let rowToDelete = null;
+
+    document.addEventListener('DOMContentLoaded', () => {
+        document.querySelectorAll('.btn-delete').forEach(button => {
+            button.addEventListener('click', function () {
+                rowToDelete = this.closest('tr');
+                const deleteModal = new bootstrap.Modal(document.getElementById('confirmDeleteModal'));
+                deleteModal.show();
+            });
+        });
+
+        document.getElementById('confirmDeleteBtn').addEventListener('click', function () {
+            if (rowToDelete) {
+                rowToDelete.remove();
+                rowToDelete = null;
+            }
+            const deleteModal = bootstrap.Modal.getInstance(document.getElementById('confirmDeleteModal'));
+            deleteModal.hide();
+        });
+    });
+</script>
 </body>
 </html>
